# WinterCup4

./: .gitignore  00-List of Problems  README.md  Statistics.txt  TODO.md
04- Problem D/: Bonus.Cpp  Editorial.md  Solution.Cpp  Statement.md
800/: Editorial.md  Solution.cpp  statement.md
Count the squares/: Editorial.md  Solution.cpp  statement.md
Decrypting the password/: CMakeLists.txt  Editorial.md  Statement.md  dp.cpp  generator.cpp
Exam/: CMakeLists.txt  Constructive Solution.Cpp  Editorial.md  Generator.Cpp  Statement.md  exhaustive search.cpp  first_no.cpp  flow.cpp  random_generator.cpp  solution.cpp
Game of Cards/: CMakeLists.txt  Editorial.md  Statement.md  abstract_algebra.h  generator.cpp  naive.cpp  solution.cpp
Game of Cards/test/: 01.in  02.in  03.in  04.in  05.in  06.in  07.in  08.in  09.in  10.in
Groups of permutations/: CMakeLists.txt  Editorial.md  Solution.Cpp  Statement.md  generator.cpp  solution_dc.cpp  solution_dc_memoized.cpp  solution_greedy.cpp
Groups of permutations/test/: 001.in  002.in  003.in  004.in
Journey through time/: CMakeLists.txt  Generator.Cpp  Solution.cpp  attempt.cpp  attempt2.cpp  editorial.md  random_generator.cpp  statement.md  tests  yessine_generator.cpp
Journey through time/test/: 12.in  13.in  14.in  15.in  16.in  17.in
Maximum Slope/: Solution.Cpp  Statement.Cpp  Statement.md
Non-Increasing Dilemma/: Editorial.md  Generator.Cpp  Statement.md  solution.cpp
Problem Format/: CMakeLists.txt  Statement.md
Two Shortest Paths/: Editorial.md  Solution.Cpp  Statement.md
co-sortable strings/: CMakeLists.txt  CMakeSettings.json  Editorial.md  Prefix_Sum_Solution.Cpp  Statement.md  generator.cpp  solution.cpp
mean_absolute_deviation/: .gitignore  CMakeLists.txt  Editorial.md  Offline_Solution_SegTree.Cpp  Statement.md  build  generator.cpp  solution_statistic_tree.cpp
others/: 55.txt  Conjecture.md  Result.md  probability_checker.cpp
others/report/: template_Article.aux  template_Article.tex  template_Article.toc
rami_scheme/: CMakeLists.txt  Easy Version Solution.Cpp  Editorial (Easy Version).md  Editorial (Hard Version).md  Statement (Easy Version).md  Statement (Hard Version).md  build  exhaustive_generator.cpp  generator.cpp  linear_algebra.h  modular_arithmetic.h  number_theory.h  polynomial.h  ring_extension.h  solution_diff.cpp  solution_hashing.cpp  solution_heuristic.cpp  solution_matrix.cpp  solution_pattern_matching.cpp  solution_ring_extension.cpp
rami_scheme/test/: 001.in
simulation/: CMakeLists.txt  Editorial.md  Statement.md  build  generator.cpp  modular_arithmetic.h  solution.cpp  solution_boost.cpp  solution_dp.cpp  solution_monte_carlo.cpp
simulation/test/: .gitignore  001.in  001.out  002.in  002.out  003.in
